<resources>
    <string name="app_name">Talentara</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_notification">Notification</string>
    <string name="title_profile">Profile</string>
    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">History</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_heading">Let’s get started!</string>
    <string name="sign_in_subheading">Explore talents and projects</string>
    <string name="sign_in_footer">Already have account?</string>
    <string name="sign_up_heading">Welcome back!</string>
    <string name="sign_up_subheading">Good to see you again</string>
    <string name="sign_up_footer">Don’t have account?</string>

    <string name="home_heading">Hi, %s</string>
    <string name="home_subheading">Let’s build something great together</string>
    <string name="btn_new_project_desc">Add New Project</string>
    <string name="home_heading2">Current Project</string>
    <string name="client_name">Client Name</string>
    <string name="project_name">Project Name</string>
    <string name="project_product">%s • %s</string>
    <string name="remaining_days">Remaining : %d days</string>
    <string name="project_status">Status</string>
    <string name="project_phase">Project Phase</string>
    <string name="phase_deadline">Deadline : %s</string>
    <string name="phase_evidence">Evidence : %s</string>

    <string name="history">History</string>
    <string name="ongoing">Ongoing</string>
    <string name="notification">Notification</string>
    <string name="notification_title">Notification Title</string>
    <string name="time">12 Apr</string>

    <string name="edit_profile_desc">Edit Profile</string>
    <string name="user_linkedin">User LinkedIn</string>
    <string name="user_github">User Github</string>
    <string name="user_gmail">User Gmail</string>

    <string name="user_profile">User</string>
    <string name="talent_profile">Talent</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="profile">Profile</string>
    <string name="account_settings">Account Settings</string>
    <string name="security">Security</string>
    <string name="application_settings">Application Settings</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="availibility_true">Ready to join a project!</string>
    <string name="project_count">0</string>
    <string name="talent_rating">0.0</string>
    <string name="project">Project</string>
    <string name="experiences">Experiences</string>
    <string name="role">Role</string>
    <string name="product_type">Product Type</string>
    <string name="platform">Platform</string>
    <string name="language">Language</string>
    <string name="tools">Tools</string>
    <string name="portfolio">Portfolio</string>
    <string name="talent_name">Talent Name</string>
    <string name="completed_in_d_days">Completed In %d Days</string>
    <string name="approved_by">Approved by</string>
    <string name="client">Client</string>
    <string name="manager">Manager</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="phase_periode">Phase Periode</string>
    <string name="waiting_page_text">Waiting Page Text</string>
    <string name="back_to_home">Back To Home</string>
    <string name="description">Description</string>
    <string name="project_periode">Project Periode</string>
    <string name="meeting_link">Meeting Link</string>
    <string name="github">Github</string>
    <string name="feature">Feature</string>
    <string name="project_offer">You Got New Project\nas a %s</string>
    <string name="accept">Accept</string>
    <string name="decline_d">Decline | %d</string>
    <string name="offer_desc">You have 24 hours to accept or will automatically declined</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="linkedin">LinkedIn</string>
    <string name="save_change">Save Change</string>
    <string name="new_project">New Project</string>
    <string name="client_name_hint">Your name, group or company</string>
    <string name="project_name_hint">Your Project Name</string>
    <string name="project_description_hint">Your Project Description</string>
    <string name="project_description">Project Description</string>
    <string name="btn_find_project_manager">Find Project Manager</string>
    <string name="start_date">Start Date</string>
    <string name="project_desc_prefix">Fungsi:\nDesain:\nWarna:\n</string>
    <string name="finalize_project">Finalize Project</string>
    <string name="project_github">Project Github</string>
    <string name="project_feature">Project Feature</string>
    <string name="btn_add_feature">Add Feature +</string>
    <string name="remove">Remove</string>
    <string name="new_portfolio">New Portfolio</string>
    <string name="project_linkedin">Project LinkedIn</string>
    <string name="btn_upload_portfolio">Upload Portfolio</string>
    <string name="talent_apply">Talent Apply</string>
    <string name="github_profile">Github Profile</string>
    <string name="linkedin_profile">LinkedIn Profile</string>
    <string name="apply_talent">Apply Talent</string>
    <string name="login_failed">Login Failed, Please try Again</string>
    <string name="register_failed">Register Failed, Please try again</string>
    <string name="register_success">Register Success, Please Login</string>
    <string name="project_is_not_completed_yet">Project is not completed yet</string>
    <string name="failed_to_get_current_project">Failed to get current project</string>
    <string name="failed_to_get_project_history">Failed to get project history</string>
    <string name="project_is_on_progress">Project is on progress</string>
    <string name="failed_to_get_notification">Failed to get notification</string>
    <string name="remove_notification">Remove Notification</string>
    <string name="are_you_sure_you_want_to_remove_this_notification">Are you sure you want to remove this notification?</string>
    <string name="yes">Yes</string>
    <string name="failed_to_delete_notification">Failed to delete notification</string>
    <string name="failed_to_get_portfolio_detail">Failed to get Portfolio Detail</string>
    <string name="periode">%s ~ %s</string>
    <string name="item_name">Item Name</string>
    <string name="client_name_portfolio_hint">Your Client Name or Individual Project</string>
    <string name="choose_image_first">Choose image first</string>
    <string name="update_user_success">User information updated successfully</string>
    <string name="failed_to_update_user_information">Failed to update user information</string>
    <string name="failed_to_get_user_information">Failed to get user information</string>
    <string name="nothing_to_change">Nothing to change</string>
    <string name="failed_tp_get_talent_information">Failed tp get talent information</string>
    <string name="failed_to_get_talent_information">Failed to get talent information</string>
    <string name="failed_create_project">Failed create project</string>
    <string name="project_purpose_prefix">Project Purpose:</string>
    <string name="project_purpose_hint">To create an application for\nrecording, tracking, and managing warehouse\ninventory items</string>
    <string name="product_type_prefix">Product Type:</string>
    <string name="product_type_hint">Mobile App and Web Dashboard</string>
    <string name="platform_target_prefix">Platform Target:</string>
    <string name="platform_target_hint">Android, iOS, and Web</string>
    <string name="target_user_prefix">Target User:</string>
    <string name="user_target_hint">Warehouse staff</string>
    <string name="key_features_prefix">Key Features:</string>
    <string name="key_feature_hint">Item data entry, stock level monitoring,\ninventory reporting</string>
    <string name="additional_hint">Tell us more! describe your project in more detail or share references to similar apps or systems</string>
    <string name="finding_project_manager">Finding the best project manager for your project</string>
    <string name="find_project_team">Find Project Team</string>
    <string name="failed_to_update_talent_availability">Failed to update talent availability</string>
    <string name="failed_to_load_portfolio">Failed to load portfolio</string>
    <string name="rating">Rating</string>
    <string name="amount">Amount</string>
    <string name="insert_amount_more_than_0">Insert amount more than 0</string>
    <string name="create_timeline">Create Timeline</string>
    <string name="delete">Delete</string>
    <string name="timeline_will_be_deleted_permanently">Timeline will be deleted permanently</string>
    <string name="delete_this_timeline">Delete this timeline?</string>
    <string name="evidence">Evidence</string>
    <string name="evidence_link">Evidence Link</string>
    <string name="update">Update</string>
    <string name="update_timeline">Update Timeline</string>
    <string name="completed_s">Completed : %s</string>
    <string name="evidence_s">Evidence : %s</string>
    <string name="failed_to_delete_portfolio">Failed to delete portfolio</string>
    <string name="completed">Completed</string>
    <string name="delete_this_portfolio">Delete this portfolio?</string>
    <string name="portfolio_will_be_deleted_permanently">Portfolio will be deleted permanently</string>
    <string name="add_new_portfolio">Add New Portfolio</string>
    <string name="client_email">Client Email</string>
    <string name="project_s_timeline">Project\'s Timeline</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="ther_is_no_current_project">There is no current project</string>
    <string name="there_is_no_current_timeline">There is no current timeline</string>
    <string name="there_is_no_notification">There is no notification</string>
    <string name="there_is_no_project">There is no project</string>
    <string name="there_is_no_timeline">There is no timeline</string>
    <string name="there_is_no_portfolio">There is no portfolio</string>
    <string name="end_date">End Date</string>
    <string name="add_portfolio">Add Portfolio +</string>
    <string name="approve">Approve</string>
    <string name="approve_this_timeline">Approve this timeline?</string>
    <string name="you_will_approve_this_timeline_permanently">You will approve this timeline permanently</string>
    <string name="apply_project_manager">Apply Project Manager</string>
    <string name="are_you_sure_want_to_be_project_manager">Are you sure want to be Project Manager</string>

</resources>