<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvOngoingProject"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:elevation="12dp"
    app:cardCornerRadius="24dp"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="4dp"
    app:strokeColor="@color/light_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/tvProject"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvClient"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/client_name"
            android:textColor="@color/blue"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tvProject"
            app:layout_constraintTop_toBottomOf="@id/tvProject" />

        <TextView
            android:id="@+id/tvProduct"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/project_product"
            android:textColor="@color/blue"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tvClient"
            app:layout_constraintTop_toBottomOf="@id/tvClient" />

        <TextView
            android:id="@+id/tvCompleted"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/completed_in_d_days"
            android:textColor="@color/blue"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tvProduct"
            app:layout_constraintTop_toBottomOf="@id/tvProduct" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:dividerColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvStatus"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStatus"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_status"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>