<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvOngoingProject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/white"
            android:elevation="8dp"
            app:cardCornerRadius="24dp"
            app:strokeColor="@color/light_gray">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/Project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">

                <TextView
                    android:id="@+id/tvProject"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_name"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvClient"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/client_name"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/tvProject"
                    app:layout_constraintTop_toBottomOf="@id/tvProject" />

                <TextView
                    android:id="@+id/tvProduct"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/project_product"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/tvClient"
                    app:layout_constraintTop_toBottomOf="@id/tvClient" />

                <TextView
                    android:id="@+id/tvCompleted"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/completed_in_d_days"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/tvProduct"
                    app:layout_constraintTop_toBottomOf="@id/tvProduct" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/remove"
            android:src="@drawable/ic_close"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>